--- a/page1.html
+++ b/page1.html
@@ -5,6 +5,6 @@
       <title>Страница 1</title>
    </head>
    <body>
-	  <a href="page2.html">Страница 2</a>
+	  <a href="index.html">Main</a>
    </body>
 </html>
