--- a/page3.html
+++ b/page3.html
@@ -5,7 +5,7 @@
       <title>page 3</title>
    </head>
    <body>
-       <a href="html1.html">Главная</a>
+       <a href="index.html">Главная</a>
 		<p> взято с сайта https://www.anekdot.ru/last/story/?ysclid=m3swgi8ttd414454770 1.Холодный дождь сменился мелким, но наглым градом и тогда я окончательно понял, что меня здесь забыли и бросили навсегда.
 Наверное подумали, что я успел спуститься вниз на последнем фуникулере.
 Но я не хрена не успел и одиноко стоял среди мокрого леса, в майке, шлепанцах и шортах, в кармане 200 рублей, а на плече футляр с объективом стоимостью 20 000 евро. Так уж получилось.
