--- a/page2.html
+++ b/page2.html
@@ -5,7 +5,7 @@
       <title>Страница 2</title>
    </head>
    <body>
-	  <a href="html1.html">Cтраница 1</a>
+	  <a href="index.html">Main</a>
 	  <p>1.Жили-были старик со старухой. Вот и говорит старик старухе:
 — Поди-ка, старуха, по коробу поскреби, по сусеку помети, не наскребешь ли муки на колобок.
 Взяла старуха крылышко, по коробу поскребла, по сусеку помела и наскребла муки горсти две.
